# 3DVisionProject

./: .gitignore  3DVisionProject  CMakeLists.txt  README.md  README_Notes.txt.  candidates18good.csv  finalbasis18good.csv  group18good.csv  makefile  nekMakefile  task_distribution.txt  testing.m
Documents/: README.md  README.txt  README_Notes.txt  task_distribution.txt
Libraries/3dTools/: 3dtools.h
Libraries/CImg/: CImg.h
Libraries/openCV/lib/: libopencv_calib3d.2.4.12.dylib  libopencv_contrib.2.4.12.dylib  libopencv_core.2.4.12.dylib  libopencv_features2d.2.4.12.dylib  libopencv_flann.2.4.12.dylib  libopencv_gpu.2.4.12.dylib  libopencv_highgui.2.4.12.dylib  libopencv_ml.2.4.12.dylib  libopencv_nonfree.2.4.12.dylib  libopencv_objdetect.2.4.12.dylib  libopencv_ocl.2.4.12.dylib  libopencv_photo.2.4.12.dylib  libopencv_stitching.2.4.12.dylib  libopencv_superres.2.4.12.dylib  libopencv_video.2.4.12.dylib
Libraries/openCV1/lib/: libopencv_imgproc.2.4.12.dylib  libopencv_legacy.2.4.12.dylib  libopencv_videostab.2.4.12.dylib
Libraries/openCV1/lib/pkgconfig/: opencv.pc
data/: cams.txt  densifyingPoints.txt  densifyingPointsIndices.txt  images_rep.txt  points.txt  points1000.txt  points3667.txt  points3667_10views.txt  points5000.txt  points99.txt
data/distanceVectors/: width_vectors_1.000000_0.000000.txt
data/distanceVectors/Huber loss 1/: height_vectors_0.000000_0.000000.txt  height_vectors_1.000000_0.000000.txt  width_vectors_0.000000_0.000000.txt
data/distanceVectors/Trivial loss/: height_vectors_0.000000_0.000000.txt  height_vectors_10.000000_100.000000.txt  height_vectors_before_BA.txt  width_vectors_before_BA.txt
data/distanceVectors/Trivial loss/distanceVectorPlot/: distanceVectorPlot.m  width_vectors_0_0.txt  width_vectors_10_100.txt
data/grouping/: outSiftFeaturesVector.txt  outputPoints.txt  outputPointsUsedInProject.txt
data/grouping/all/: outputPoints.txt  outputPoints_PCA.txt
data/mySavedLattices/: lattice0.txt  lattice11.txt  lattice18.txt  lattice2.txt  lattice24.txt  lattice4.txt
data/savedLattices/: lattice0.txt  lattice11.txt  lattice13.txt  lattice17.txt  lattice18.txt  lattice2.txt  lattice27.txt  lattice31.txt  lattice33.txt  lattice4.txt  lattice8.txt
src/: 3dtools.cpp  3dtools.h  BundleOptimizer.cpp  BundleOptimizer.h  camera.h  ceresReprojectionErrors.h  detectRepPoints.cpp  detectRepPoints.h  inputManager.h  latticeClass.h  latticeDetector.cpp  latticeDetector.h  latticeDetectorTester.cpp  latticeDetectorTester.h  latticeStruct.h  main.cpp  main.h  main_test.cpp  main_test2.cpp  main_test_opencvOFF.cpp  my_v3d_vrmlio.h  planeFit.cpp  planeFitter.cpp  planeFitter.h
